--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
   "root": true,
   "extends": ["@fisch0920/eslint-config"],
   "rules": {
-    "react/prop-types": "off",
+ "react/prop-types": "off",
     "unicorn/no-array-reduce": "off",
     "unicorn/filename-case": "off",
     "no-process-env": "off",
@@ -13,5 +13,10 @@
     "jsx-a11y/interactive-supports-focus": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "@typescript-eslint/naming-convention": "off"
+    // .eslintrc.js
+module.exports = {
+  extends: ['next', 'next/core-web-vitals'],
+}
+
   }
 }
